Move l3sort documentation to right places

--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -55,6 +55,10 @@
 %
 % \begin{documentation}
 %
+% \section{Controlling sorting}
+%
+% \label{sec:l3sort:mech}
+%
 % \LaTeX3 comes with a facility to sort list variables (sequences,
 % token lists, or comma-lists) according to some user-defined
 % comparison. For instance,
@@ -94,50 +98,6 @@
 %   \tn{toks} registers.  On the other hand, altering the value of a
 %   previously allocated \tn{toks} register is not a problem.
 % \end{texnote}
-%
-% \begin{function}{\seq_sort:Nn, \seq_gsort:Nn}
-%   \begin{syntax}
-%     \cs{seq_sort:Nn} \meta{sequence} \Arg{comparison code}
-%   \end{syntax}
-%   Sorts the items in the \meta{sequence} according to the
-%   \meta{comparison code}, and assigns the result to
-%   \meta{sequence}.
-% \end{function}
-%
-% \begin{function}{\tl_sort:Nn, \tl_gsort:Nn}
-%   \begin{syntax}
-%     \cs{tl_sort:Nn} \meta{tl var} \Arg{comparison code}
-%   \end{syntax}
-%   Sorts the items in the \meta{tl var} according to the
-%   \meta{comparison code}, and assigns the result to
-%   \meta{tl var}.
-% \end{function}
-%
-% \begin{function}{\clist_sort:Nn, \clist_gsort:Nn}
-%   \begin{syntax}
-%     \cs{clist_sort:Nn} \meta{clist var} \Arg{comparison code}
-%   \end{syntax}
-%   Sorts the items in the \meta{clist var} according to the
-%   \meta{comparison code}, and assigns the result to
-%   \meta{clist var}.
-% \end{function}
-%
-% \begin{function}[EXP]{\tl_sort:nN}
-%   \begin{syntax}
-%     \cs{tl_sort:nN} \Arg{token list} \meta{conditional}
-%   \end{syntax}
-%   Sorts the items in the \meta{token list}, using the
-%   \meta{conditional} to compare items, and leaves the result in the
-%   input stream.  The \meta{conditional} should have signature |:nnTF|,
-%   and return \texttt{true} if the two items being compared should be
-%   left in the same order, and \texttt{false} if the items should be
-%   swapped.
-%   \begin{texnote}
-%     The result is returned within \cs{exp_not:n}, which means that the
-%     token list will not expand further when appearing in an
-%     \texttt{x}-type argument expansion.
-%   \end{texnote}
-% \end{function}
 %
 % \end{documentation}
 %
@@ -409,16 +369,18 @@
       \seq_map_inline:Nn \seq_map_break:n
       { \s__seq \@@_toks:NN \exp_not:N \__seq_item:n }
   }
+\cs_generate_variant:Nn \seq_sort:Nn { c }
 \cs_new_protected:Npn \seq_gsort:Nn
   {
     \@@_main:NNNnNn \tl_gset:Nn
       \seq_map_inline:Nn \seq_map_break:n
       { \s__seq \@@_toks:NN \exp_not:N \__seq_item:n }
   }
+\cs_generate_variant:Nn \seq_gsort:Nn { c }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\tl_sort:Nn, \tl_gsort:Nn}
+% \begin{macro}{\tl_sort:Nn, \tl_sort:cn, \tl_gsort:Nn, \tl_gsort:cn}
 %   Again, use \cs{tl_set:Nn} or \cs{tl_gset:Nn} to control
 %   the scope of the assignment. Mapping through the token
 %   list is done with \cs{tl_map_inline:Nn}, and producing
@@ -431,16 +393,19 @@
       \tl_map_inline:Nn \tl_map_break:n
       { \@@_toks:NN \prg_do_nothing: \prg_do_nothing: }
   }
+\cs_generate_variant:Nn \tl_sort:Nn { c }
 \cs_new_protected:Npn \tl_gsort:Nn
   {
     \@@_main:NNNnNn \tl_gset:Nn
       \tl_map_inline:Nn \tl_map_break:n
       { \@@_toks:NN \prg_do_nothing: \prg_do_nothing: }
   }
+\cs_generate_variant:Nn \tl_gsort:Nn { c }
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\clist_sort:Nn, \clist_gsort:Nn}
+% \begin{macro}
+%   {\clist_sort:Nn, \clist_sort:cn, \clist_gsort:Nn, \clist_gsort:cn}
 % \begin{macro}[aux]{\@@_clist:NNn}
 %   The case of empty comma-lists is a little bit special as usual,
 %   and filtered out: there is nothing to sort in that case.
@@ -458,6 +423,8 @@
   { \@@_clist:NNn \tl_set:Nn }
 \cs_new_protected:Npn \clist_gsort:Nn
   { \@@_clist:NNn \tl_gset:Nn }
+\cs_generate_variant:Nn \clist_sort:Nn  { c }
+\cs_generate_variant:Nn \clist_gsort:Nn { c }
 \cs_new_protected:Npn \@@_clist:NNn #1#2#3
   {
     \clist_if_empty:NF #2
@@ -611,7 +578,6 @@
   }
 %    \end{macrocode}
 % \end{macro}
-%
 %
 % \begin{macro}{\sort_return_same:, \sort_return_swapped:}
 % \begin{macro}[aux]{\@@_return_mark:N}
