--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -783,6 +783,35 @@
 %   \emph{resets} the content of the variable.
 % \end{function}
 %
+% \begin{function}[added = 2017-02-06]
+%   {\tl_sort:Nn, \tl_sort:cn, \tl_gsort:Nn, \tl_gsort:cn}
+%   \begin{syntax}
+%     \cs{tl_sort:Nn} \meta{tl var} \Arg{comparison code}
+%   \end{syntax}
+%   Sorts the items in the \meta{tl var} according to the
+%   \meta{comparison code}, and assigns the result to
+%   \meta{tl var}. The details of sorting comparison are
+%   described in Section~\ref{sec:l3sort:mech}.
+% \end{function}
+%
+% \begin{function}[added = 2017-02-06, EXP]{\tl_sort:nN}
+%   \begin{syntax}
+%     \cs{tl_sort:nN} \Arg{token list} \meta{conditional}
+%   \end{syntax}
+%   Sorts the items in the \meta{token list}, using the
+%   \meta{conditional} to compare items, and leaves the result in the
+%   input stream.  The \meta{conditional} should have signature |:nnTF|,
+%   and return \texttt{true} if the two items being compared should be
+%   left in the same order, and \texttt{false} if the items should be
+%   swapped. The details of sorting comparison are
+%   described in Section~\ref{sec:l3sort:mech}.
+%   \begin{texnote}
+%     The result is returned within \cs{exp_not:n}, which means that the
+%     token list will not expand further when appearing in an
+%     \texttt{x}-type argument expansion.
+%   \end{texnote}
+% \end{function}
+%
 % \section{The first token from a token list}
 %
 % Functions which deal with either only the very first item (balanced
@@ -2402,6 +2431,11 @@
 \@@_tmp:w { ~ }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}
+%   {\tl_sort:Nn, \tl_sort:cn, \tl_gsort:Nn, \tl_gsort:cn, \tl_sort:nN}
+%   Implemented in \pkg{l3sort}.
 % \end{macro}
 %
 % \subsection{Token by token changes}
