--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -2,7 +2,7 @@
 %
 %% File: l3clist.dtx Copyright (C) 2004-2011 Frank Mittelbach,
 %%                                 The LaTeX3 project
-%%                             (C) 2012-2016 The LaTeX3 Project
+%%                             (C) 2012-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -303,6 +303,17 @@
 %     comma list will not expand further when appearing in an
 %     \texttt{x}-type argument expansion.
 %   \end{texnote}
+% \end{function}
+%
+% \begin{function}[added = 2017-02-06]
+%   {\clist_sort:Nn, \clist_sort:cn, \clist_gsort:Nn, \clist_gsort:cn}
+%   \begin{syntax}
+%     \cs{clist_sort:Nn} \meta{clist var} \Arg{comparison code}
+%   \end{syntax}
+%   Sorts the items in the \meta{clist var} according to the
+%   \meta{comparison code}, and assigns the result to
+%   \meta{clist var}. The details of sorting comparison are
+%   described in Section~\ref{sec:l3sort:mech}.
 % \end{function}
 %
 % \section{Comma list conditionals}
@@ -1356,6 +1367,11 @@
   { \exp_not:o { \use_none:n #2 } }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}
+%   {\clist_sort:Nn, \clist_sort:cn, \clist_gsort:Nn, \clist_gsort:cn}
+%   Implemented in \pkg{l3sort}.
 % \end{macro}
 %
 % \subsection{Comma list conditionals}
