Remove optimization in xparse for all-m commands
This slows down commands with only m-type arguments but means that
all commands have the same structure, helpful for beamer patching,
for diagnostics, and more directly for simplifying the code now.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -1026,13 +1026,7 @@
     \tl_set:Nx \l_@@_function_tl { \cs_to_str:N #1 }
     \@@_normalize_arg_spec:n {#2}
     \exp_args:No \@@_prepare_signature:n \l_@@_arg_spec_tl
-    \int_compare:nNnTF \l_@@_current_arg_int = \l_@@_m_args_int
-      {
-        \bool_if:NTF \l_@@_environment_bool
-          { \@@_declare_cmd_mixed:Nn #1 {#3} }
-          { \@@_declare_cmd_all_m:Nn #1 {#3} }
-      }
-      { \@@_declare_cmd_mixed:Nn #1 {#3} }
+    \@@_declare_cmd_code:Nn #1 {#3}
     \@@_break_point:n {#2}
   }
 \cs_generate_variant:Nn \@@_declare_cmd_internal:Nnn { cnx }
@@ -1048,44 +1042,25 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_declare_cmd_all_m:Nn, \@@_declare_cmd_mixed:Nn}
+% \begin{macro}{\@@_declare_cmd_code:Nn}
 % \begin{macro}[aux]
-%   {\@@_declare_cmd_mixed_aux:Nn, \@@_declare_cmd_mixed_expandable:Nn}
-%   When all of the arguments to grab are simple \texttt{m}-type, a short
-%   cut can be taken to provide only a single function. In the case of
-%   expandable commands, this can also happen for \texttt{+m} (as all arguments
-%   in this case must be long).
+%   {\@@_declare_cmd_code_aux:Nn, \@@_declare_cmd_code_expandable:Nn}
+%   The appropriate auxiliary is called.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_declare_cmd_all_m:Nn #1#2
-  {
-    \cs_generate_from_arg_count:Ncnn #1
-      {
-        cs_set
-        \bool_if:NF \l_@@_expandable_bool { _protected }
-        \bool_if:NF \l_@@_all_long_bool { _nopar }
-        :Npn
-      }
-      \l_@@_current_arg_int {#2}
-  }
-%    \end{macrocode}
-%   In the case of mixed arguments, any remaining \texttt{m}-type ones are
-%   first added to the signature, then the appropriate auxiliary is called.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_declare_cmd_mixed:Nn
+\cs_new_protected:Npn \@@_declare_cmd_code:Nn
   {
     \bool_if:NTF \l_@@_expandable_bool
-      { \@@_declare_cmd_mixed_expandable:Nn }
-      { \@@_declare_cmd_mixed_aux:Nn }
+      { \@@_declare_cmd_code_expandable:Nn }
+      { \@@_declare_cmd_code_aux:Nn }
    }
 %    \end{macrocode}
-%   Standard functions with mixed argument specifications call
+%   Standard functions call
 %   \cs{@@_start_cmd:NNnnn}, which receives an auxiliary used for
 %   grabbing arguments, an auxiliary containing the code, and then the
 %   signature, default arguments, and processors.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_declare_cmd_mixed_aux:Nn #1#2
+\cs_new_protected:Npn \@@_declare_cmd_code_aux:Nn #1#2
   {
-    \@@_flush_m_args:
     \cs_generate_from_arg_count:cNnn
       { \l_@@_function_tl \c_space_tl code }
       \cs_set_protected:Npn \l_@@_current_arg_int {#2}
@@ -1105,7 +1080,7 @@
           }
       }
   }
-\cs_new_protected:Npn \@@_declare_cmd_mixed_expandable:Nn #1#2
+\cs_new_protected:Npn \@@_declare_cmd_code_expandable:Nn #1#2
   {
     \cs_generate_from_arg_count:cNnn
       { \l_@@_function_tl \c_space_tl code }
@@ -1635,6 +1610,7 @@
     \bool_set_false:N \l_@@_process_some_bool
     \tl_clear:N \l_@@_signature_tl
     \@@_prepare_signature:N #1 \q_recursion_tail \q_recursion_stop
+    \bool_if:NF \l_@@_expandable_bool { \@@_flush_m_args: }
   }
 %    \end{macrocode}
 %  The main looping function does not take an argument, but carries out the
@@ -1949,8 +1925,8 @@
 %
 % \subsection{Setting up expandable types}
 %
-% The approach here is not dissimilar to that for standard types, although
-% types which are not supported in expandable functions give an error. There is
+% The approach here is not dissimilar to that for standard types, but fewer types
+% are supported. There is
 % also a need to define the per-function auxiliaries: this is done here, while
 % the general grabbers are dealt with later.
 %
@@ -2477,11 +2453,12 @@
 % \begin{macro}{\@@_grab_m_6:w}
 % \begin{macro}{\@@_grab_m_7:w}
 % \begin{macro}{\@@_grab_m_8:w}
+% \begin{macro}{\@@_grab_m_9:w}
 % \begin{macro}[aux]{\@@_grab_m_aux:Nnnnnnnnn}
-%   Grabbing 1--8 mandatory arguments. We don't need to worry about
-%   nine arguments as this is only possible if everything is
-%   mandatory. Each function has an auxiliary so that \cs{par} tokens
-%   from other arguments still work.
+%   Grabbing 1--8 mandatory arguments is done by giving 8--1 known
+%   arguments to a 9-argument function that stores them in
+%   \cs{l_@@_args_tl}.  For simplicity, grabbing 9 mandatory arguments
+%   is done by grabbing 5 then 4 arguments.
 %    \begin{macrocode}
 \cs_new_protected_nopar:Npn \@@_grab_m_aux:Nnnnnnnnn #1#2#3#4#5#6#7#8#9
   {
@@ -2537,7 +2514,13 @@
     \exp_after:wN \cs_set_eq:NN \l_@@_fn_tl \@@_grab_m_aux:Nnnnnnnnn
     \l_@@_fn_tl \prg_do_nothing:
   }
+\cs_new_protected:cpx { @@_grab_m_9:w }
+  {
+    \exp_not:c { @@_grab_m_5:w }
+    \exp_not:c { @@_grab_m_4:w }
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
