Store argument specification in function definition
This removes the need for property lists storing the argument
specification of all document commands.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -818,14 +818,6 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_command_arg_specs_prop}
-%   Used to record all document commands created, and the argument
-%   specifications that go with these.
-%    \begin{macrocode}
-\prop_new:N \l_@@_command_arg_specs_prop
-%    \end{macrocode}
-% \end{variable}
-%
 % \begin{variable}{\l_@@_current_arg_int}
 %   The number of the current argument being set up: this is used for creating
 %   the expandable auxiliary functions, and also to indicate if all arguments
@@ -852,14 +844,6 @@
 %   and so the function-generating code needs to know this.
 %    \begin{macrocode}
 \bool_new:N \l_@@_environment_bool
-%    \end{macrocode}
-% \end{variable}
-%
-% \begin{variable}{\l_@@_environment_arg_specs_prop}
-%   Used to record all document environment created, and the argument
-%   specifications that go with these.
-%    \begin{macrocode}
-\prop_new:N \l_@@_environment_arg_specs_prop
 %    \end{macrocode}
 % \end{variable}
 %
@@ -1012,7 +996,6 @@
         \__msg_kernel_info:nnxx { xparse } { define-command }
           { \token_to_str:N #1 } { \tl_to_str:n {#2} }
       }
-    \prop_put:Nnn \l_@@_command_arg_specs_prop {#1} {#2}
     \bool_set_false:N \l_@@_environment_bool
     \@@_declare_cmd_internal:Nnn #1 {#2}
   }
@@ -1026,7 +1009,7 @@
     \tl_set:Nx \l_@@_function_tl { \cs_to_str:N #1 }
     \@@_normalize_arg_spec:n {#2}
     \exp_args:No \@@_prepare_signature:n \l_@@_arg_spec_tl
-    \@@_declare_cmd_code:Nn #1 {#3}
+    \@@_declare_cmd_code:Nnn #1 {#2} {#3}
     \@@_break_point:n {#2}
   }
 \cs_generate_variant:Nn \@@_declare_cmd_internal:Nnn { cnx }
@@ -1042,31 +1025,32 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_declare_cmd_code:Nn}
+% \begin{macro}{\@@_declare_cmd_code:Nnn}
 % \begin{macro}[aux]
-%   {\@@_declare_cmd_code_aux:Nn, \@@_declare_cmd_code_expandable:Nn}
+%   {\@@_declare_cmd_code_aux:Nnn, \@@_declare_cmd_code_expandable:Nnn}
 %   The appropriate auxiliary is called.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_declare_cmd_code:Nn
+\cs_new_protected:Npn \@@_declare_cmd_code:Nnn
   {
     \bool_if:NTF \l_@@_expandable_bool
-      { \@@_declare_cmd_code_expandable:Nn }
-      { \@@_declare_cmd_code_aux:Nn }
+      { \@@_declare_cmd_code_expandable:Nnn }
+      { \@@_declare_cmd_code_aux:Nnn }
    }
 %    \end{macrocode}
 %   Standard functions call
-%   \cs{@@_start_cmd:NNnnn}, which receives an auxiliary used for
+%   \cs{@@_start:nNNnnn}, which receives an auxiliary used for
 %   grabbing arguments, an auxiliary containing the code, and then the
 %   signature, default arguments, and processors.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_declare_cmd_code_aux:Nn #1#2
+\cs_new_protected:Npn \@@_declare_cmd_code_aux:Nnn #1#2#3
   {
     \cs_generate_from_arg_count:cNnn
       { \l_@@_function_tl \c_space_tl code }
-      \cs_set_protected:Npn \l_@@_current_arg_int {#2}
+      \cs_set_protected:Npn \l_@@_current_arg_int {#3}
     \cs_set_protected_nopar:Npx #1
       {
-        \@@_start_cmd:NNnnn
+        \@@_start:nNNnnn
+          { \exp_not:n {#2} }
           \exp_not:c { \l_@@_function_tl \c_space_tl }
           \exp_not:c { \l_@@_function_tl \c_space_tl code }
           { \exp_not:o \l_@@_signature_tl }
@@ -1080,18 +1064,18 @@
           }
       }
   }
-\cs_new_protected:Npn \@@_declare_cmd_code_expandable:Nn #1#2
+\cs_new_protected:Npn \@@_declare_cmd_code_expandable:Nnn #1#2#3
   {
     \cs_generate_from_arg_count:cNnn
       { \l_@@_function_tl \c_space_tl code }
-      \cs_set:Npn \l_@@_current_arg_int {#2}
+      \cs_set:Npn \l_@@_current_arg_int {#3}
     \cs_set_nopar:Npx #1
       {
-        \exp_not:o \l_@@_signature_tl
-        \exp_not:N \@@_grab_expandable_end:wN
-        \exp_not:c { \l_@@_function_tl \c_space_tl code }
-        \exp_not:N \q_@@
-        \exp_not:c { \l_@@_function_tl \c_space_tl }
+        \exp_not:N \@@_start_expandable:nNNn
+          { \exp_not:n {#2} }
+          \exp_not:c { \l_@@_function_tl \c_space_tl }
+          \exp_not:c { \l_@@_function_tl \c_space_tl code }
+          { \exp_not:o \l_@@_signature_tl }
       }
     \bool_if:NTF \l_@@_all_long_bool
       { \cs_set:cpx }
@@ -1124,7 +1108,6 @@
         \__msg_kernel_info:nnxx { xparse } { define-environment }
           {#1} { \tl_to_str:n {#2} }
       }
-    \prop_put:Nnn \l_@@_environment_arg_specs_prop {#1} {#2}
     \bool_set_false:N \l_@@_expandable_bool
     \bool_set_true:N \l_@@_environment_bool
     \@@_declare_env_internal:nnnn {#1} {#2}
@@ -1163,21 +1146,34 @@
 % \end{macro}
 % \end{macro}
 %
-% \subsection{Structure of non-expandable \pkg{xparse} commands}
+% \subsection{Structure of \pkg{xparse} commands}
 %
-% \begin{macro}{\@@_start_cmd:NNnnn}
+% \begin{macro}{\@@_start_expandable:nNNn}
+%   This is called for all expandable commands.  |#4| is the signature,
+%   responsible for grabbing arguments.  |#3| is the code to run.
+%   |#2|~is a function (named after the command) that grabs a single
+%   argument in the input stream.  The argument specification |#1| is
+%   unused but used by diagnostic functions.
+%    \begin{macrocode}
+\cs_new:Npn \@@_start_expandable:nNNn #1#2#3#4
+  { #4 \@@_grab_expandable_end:wN #3 \q_@@ #2 }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\@@_start:nNNnnn}
 %   This sets up a few variables to minimize the boilerplate code
 %   included in all \pkg{xparse}-defined commands.  It then runs the
-%   grabbers~|#3|.
+%   grabbers~|#4|.  Again, the argument specification |#1| is only for
+%   diagnostics.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_start_cmd:NNnnn #1#2#3#4#5
+\cs_new_protected:Npn \@@_start:nNNnnn #1#2#3#4#5#6
   {
     \tl_clear:N \l_@@_args_tl
-    \tl_set:Nn \l_@@_fn_tl {#1}
-    \tl_set:Nn \l_@@_fn_code_tl {#2}
-    \tl_set:Nn \l_@@_defaults_tl {#4}
-    \tl_set:Nn \l_@@_process_all_tl {#5}
-    #3 \@@_run_code:
+    \tl_set:Nn \l_@@_fn_tl {#2}
+    \tl_set:Nn \l_@@_fn_code_tl {#3}
+    \tl_set:Nn \l_@@_defaults_tl {#5}
+    \tl_set:Nn \l_@@_process_all_tl {#6}
+    #4 \@@_run_code:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -3323,22 +3319,37 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\@@_get_arg_spec:NTF}
+%   If the command is not an \pkg{xparse} command, complain.  If it is,
+%   its second \enquote{item} is the argument specification.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_get_arg_spec:NTF #1#2#3
+  {
+    \@@_cmd_if_xparse:NTF #1
+      {
+        \tl_set:Nx \ArgumentSpecification { \tl_item:Nn #1 { 2 } }
+        #2
+      }
+      {#3}
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}{\@@_get_arg_spec:N}
 % \begin{macro}{\@@_get_arg_spec:n}
 % \begin{variable}{\ArgumentSpecification}
-%   Recovering the argument specification is trivial, using the
-%   branching \cs{prop_get:NnN} function.
+%   Recovering the argument specification is now trivial.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_get_arg_spec:N #1
   {
-    \prop_get:NnNF \l_@@_command_arg_specs_prop {#1}
-      \ArgumentSpecification
+    \@@_get_arg_spec:NTF #1 { }
       { \@@_get_arg_spec_error:N #1 }
   }
 \cs_new_protected:Npn \@@_get_arg_spec:n #1
   {
-    \prop_get:NnNF \l_@@_environment_arg_specs_prop {#1}
-      \ArgumentSpecification
+    \exp_args:Nc \@@_get_arg_spec:NTF
+      { environment~ \tl_to_str:n {#1} }
+      { }
       { \@@_get_arg_spec_error:n {#1} }
   }
 \tl_new:N \ArgumentSpecification
@@ -3354,15 +3365,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_show_arg_spec:N #1
   {
-    \prop_get:NnNTF \l_@@_command_arg_specs_prop {#1}
-      \ArgumentSpecification
+    \@@_get_arg_spec:NTF #1
       { \tl_show:N \ArgumentSpecification }
       { \@@_get_arg_spec_error:N #1 }
   }
 \cs_new_protected:Npn \@@_show_arg_spec:n #1
   {
-    \prop_get:NnNTF \l_@@_environment_arg_specs_prop {#1}
-      \ArgumentSpecification
+    \exp_args:Nc \@@_get_arg_spec:NTF
+      { environment~ \tl_to_str:n {#1} }
       { \tl_show:N \ArgumentSpecification }
       { \@@_get_arg_spec_error:n {#1} }
   }
@@ -3479,6 +3489,34 @@
     #1 {#2} {#4}
     \@@_tl_mapthread_loop:w #1#3 \q_mark
   }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\@@_cmd_if_xparse:NTF}
+% \begin{macro}[aux]{\@@_cmd_if_xparse_aux:N}
+%   To determine whether the command is an \pkg{xparse} command check
+%   that its |arg_spec| is empty (this also excludes non-macros) and
+%   that its |replacement_spec| starts with either \cs{@@_start:nNNnnn}
+%   (non-expandable command) or \cs{@@_start_expandable:nNNn}
+%   (expandable command).
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_cmd_if_xparse:NTF #1
+  {
+    \exp_args:Nf \str_case_x:nnTF
+      {
+        \exp_args:Nf \tl_if_empty:nT { \token_get_arg_spec:N #1 }
+          {
+            \exp_last_unbraced:Nf \@@_cmd_if_xparse_aux:w
+              { \token_get_replacement_spec:N #1 } ~ \q_stop
+          }
+      }
+      {
+        { \token_to_str:N \@@_start:nNNnnn } { }
+        { \token_to_str:N \@@_start_expandable:nNNn } { }
+      }
+  }
+\cs_new:Npn \@@_cmd_if_xparse_aux:w #1 ~ #2 \q_stop {#1}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
