Move some documentation around

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -250,11 +250,6 @@
 % argument processors is a somewhat advanced topic, (or at least a less
 % commonly used feature) and is covered in Section~\ref{sec:processors}.
 %
-% By default, an argument of type~\texttt{v} must be at most one line.
-% Prefixing with \texttt{+} allows line breaks within the argument.  The
-% argument is given as a string of characters with category codes~$12$
-% or~$13$, except spaces, which have category code~$10$.
-%
 % When an optional argument is followed by a mandatory argument with the
 % same delimiter, \pkg{xparse} issues a warning because the optional
 % argument could not be omitted by the user, thus becoming in effect
@@ -315,12 +310,16 @@
 % result in the grabbed argument consisting of tokens of category codes
 % $12$~(\enquote{other}) and $13$~(\enquote{active}), except spaces,
 % which are given category code $10$~(\enquote{space}). The argument is
-% delimited in a similar manner to the \LaTeXe{} \cs{verb} function.
+% delimited in a similar manner to the \LaTeXe{} \cs{verb} function, or
+% by (correctly nested) pairs of braces.
 %
 % Functions containing verbatim arguments cannot appear in the arguments
 % of other functions. The \texttt{v}~argument specifier includes code to check
 % this, and will raise an error if the grabbed argument has already been
 % tokenized by \TeX{} in an irreversible way.
+%
+% By default, an argument of type~\texttt{v} must be at most one line.
+% Prefixing with \texttt{+} allows line breaks within the argument.
 %
 % Users should note that support for verbatim arguments is somewhat
 % experimental. Feedback is therefore very welcome on the \texttt{LaTeX-L}
@@ -356,6 +355,25 @@
 % Users should note that support for default arguments referring to
 % other arguments is somewhat experimental. Feedback is therefore very
 % welcome on the \texttt{LaTeX-L} mailing list.
+%
+% \subsection{Default values for \enquote{embellishments}}
+% \label{sec:embellishment}
+%
+% The \texttt{E}-type argument allows one default value per test token.
+% This is achieved by giving a list of defaults for each entry in the
+% list, for example:
+% \begin{verbatim}
+%   E{^_}{{UP}{DOWN}}
+% \end{verbatim}
+% If the list of default values is \emph{shorter} than the list of test tokens,
+% the special \cs{NoValue} marker will be returned (as for the \texttt{e}-type
+% argument). Thus for example
+% \begin{verbatim}
+%   E{^_}{{UP}}
+% \end{verbatim}
+% has default \texttt{UP} for the |^| test token, but will return the
+% \cs{NoValue} marker as a default for |_|. This allows mixing of explicit
+% defaults with testing for missing values.
 %
 % \subsection{Declaring commands and environments}
 %
@@ -512,25 +530,6 @@
 %   checks for a star as the first argument, then chooses the action to
 %   take based on this information.
 % \end{function}
-%
-% \subsection{Default values for \enquote{embellishments}}
-% \label{sec:embellishment}
-%
-% The \texttt{E}-type argument allows one default value per test token.
-% This is achieved by giving a list of defaults for each entry in the
-% list, for example:
-% \begin{verbatim}
-%   E{^_}{{UP}{DOWN}}
-% \end{verbatim}
-% If the list of default values is \emph{shorter} than the list of test tokens,
-% the special \cs{NoValue} marker will be returned (as for the \texttt{e}-type
-% argument). Thus for example
-% \begin{verbatim}
-%   E{^_}{{UP}}
-% \end{verbatim}
-% has default \texttt{UP} for the |^| test token, but will return the
-% \cs{NoValue} marker as a default for |_|. This allows mixing of explicit
-% defaults with testing for missing values.
 %
 % \subsection{Argument processors}
 % \label{sec:processors}
